feat(CAT-FR-GD-08): rename tests